--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,4 +2,57 @@
 
 @tailwind components;
 
+.btn {
+  @apply font-bold py-1 px-3 rounded;
+  transition: background-color 0.2s ease;
+}
+
+.btn:focus {
+  @apply outline-none shadow-outline;
+}
+
+.btn-blue {
+  @apply bg-blue-500 text-white;
+}
+
+.btn-blue:hover {
+  @apply bg-blue-700;
+}
+
+.btn-red {
+  @apply bg-red-600 text-white;
+}
+
+.btn-red:hover {
+  @apply bg-red-700;
+}
+
+.btn-gray {
+  @apply bg-gray-600 text-white;
+}
+
+.btn-gray:hover {
+  @apply bg-gray-700;
+}
+
+.btn-green {
+  @apply bg-green-600 text-white;
+}
+
+.btn-green:hover {
+  @apply bg-green-700;
+}
+
+.card {
+  @apply bg-white border border-gray-500 p-8 rounded;
+}
+
+.input {
+  @apply appearance-none block bg-white border border-gray-400 px-4 py-3 rounded-sm text-gray-900 w-full;
+}
+
+.input:focus {
+  @apply outline-none;
+}
+
 @tailwind utilities;
